--- a/projects/anglify/src/modules/text-field/text-field.component.scss
+++ b/projects/anglify/src/modules/text-field/text-field.component.scss
@@ -7,11 +7,13 @@
 :host {
   width: 100%;
   display: grid;
-  grid-template-columns: auto 1fr auto;
-  row-gap: 4px;
   grid-template-areas:
     'outer-prepend text-field-container  outer-append'
     '. details .';
+  grid-template-columns: auto 1fr auto;
+  grid-template-rows: auto 1fr;
+  row-gap: 4px;
+  overflow-x: hidden;
 
   .outer-prepend:not(:empty) {
     grid-area: outer-prepend;
