--- a/projects/docs/src/app/components/code-example/code-example.component.scss
+++ b/projects/docs/src/app/components/code-example/code-example.component.scss
@@ -17,6 +17,7 @@
     display: flex;
     gap: 1rem;
     justify-content: flex-end;
+    min-height: 24px;
   }
 
   pre {
